--- a/Lime/Changelog.txt
+++ b/Lime/Changelog.txt
@@ -1,4 +1,8 @@
 
+Lime 12 [2018.6.7.]
+- 전역 타이머를 0.5초에서 1.0초로 변경합니다. 
+- 약간의 최적화를 하였습니다.
+
 Lime 9 [2018.6.6.]
 - 격전의 아제로스 8.0.1.26766을 지원합니다.
 - 파티 버프를 일부 지원합니다 (사제, 법사)
