--- a/Lime/Changelog.txt
+++ b/Lime/Changelog.txt
@@ -1,4 +1,9 @@
 
+
+Lime 13 [2018.6.7.]
+- 공격대 버프를 추가합니다.
+- 생존기 목록을 수정합니다.
+
 Lime 12 [2018.6.7.]
 - 전역 타이머를 0.5초에서 1.0초로 변경합니다. 
 - 약간의 최적화를 하였습니다.
