--- a/Lime/Changelog.txt
+++ b/Lime/Changelog.txt
@@ -1,14 +1,67 @@
 
+Lime 17 [2018.6.15.]
+
+[KOREAN]
+- 번체 중국어를 지원합니다. 번역해 주신 gaspy10님께 감사의 말씀 드립니다.
+
+[English]
+- Supports Traditional Chinese. Thank you for your translation, gaspy10.
+
+
+Lime 16 [2018.6.13.]
+
+[KOREAN]
+- 몇몇 버그를 수정합니다.
+- 생존기 목록과 주문 타이머 목록을 업데이트합니다.
+
+[English]
+- Fixed some bugs.
+- Updated survival skills, spell timer, etc.
+
+
+Lime 15 [2018.6.8.]
+
+[KOREAN]
+- BfA 8.0.1.26788 버전을 지원합니다.
+- 마법사 저주 주문을 데이터베이스에 추가합니다.
+- 공대 생존기를 추가하였습니다. (마법사, 사제, 전사)
+- 개인 생존기의 목록을 업데이트하였습니다.
+- 공격대 프레임의 화면 갱신 주기를 0.5초에서 1.0초로 변경하였습니다.
+- 오라 기능을 약간 최적화하였습니다.
+- 주문 타이머는 이제 오로지 주문 ID로만 적용이 가능합니다. 더 이상 주문 이름으로 주문 타이머를 설정할 수 없습니다.
+- 사용하지 않는 스크립트를 제거하였습니다.
+- 격전의 아제로스에서 호환되지 않는 부분을 제거하였습니다.
+- 몇몇 드롭다운 메뉴를 삭제했습니다.
+- 기타 잡다한 오류를 수정하였습니다.
+
+[English]
+- Support BfA 8.0.1.26788 client.
+- Adds the mage's cursed spell to the database.
+- Adds a group buff. (Mage, Priest, Warrior)
+- Modify the list of survival skill.
+- Change the global timer from 0.5 seconds to 1.0 seconds.
+- The aura function is slightly optimized.
+- The spell timer should now only be entered as an spell ID. Spell timers are no longer available for spell names.
+- Changed the API for UnitAura, UnitBuff, and UnitDebuff. Inevitably, the parts that can not be fixed with the API use a compatible library.
+- Remove unusual scripts.
+- Remove any incompatible parts from BfA
+- Remove some drop-down menus.
+- Fix other errors.
+
+
 Lime 14 [2018.6.8.]
 - 마법사의 저주 해제 주문을 데이터베이스에 추가합니다.
+
 
 Lime 13 [2018.6.7.]
 - 공격대 버프를 추가합니다.
 - 생존기 목록을 수정합니다.
 
+
 Lime 12 [2018.6.7.]
 - 전역 타이머를 0.5초에서 1.0초로 변경합니다. 
 - 약간의 최적화를 하였습니다.
+
 
 Lime 9 [2018.6.6.]
 - 격전의 아제로스 8.0.1.26766을 지원합니다.
@@ -20,6 +73,7 @@ Lime 9 [2018.6.6.]
 - 몇몇 드롭다운 메뉴를 제거합니다.
 - UnitAura, UnitBuff, UnitDebuff 관련하여 API를 바꾸었습니다. 부득이하게 API를 고칠 수 없는 부분은 호환 라이브러리를 사용합니다.
 - 기타 오류를 수정합니다.
+
 
 Lime 8 [2018.6.6.]
 - 접속 시 미니맵 버튼이 숨겨지지 않는 오류를 수정합니다.
