--- a/Lime/Changelog.txt
+++ b/Lime/Changelog.txt
@@ -1,3 +1,8 @@
+Lime r29 [2018.7.21.]
+- Removed mp3 resources, and converted to ogg/vorbis.
+- [for developer only] I've added Korean comment to some files.
+
+
 Lime r28 [2018.7.20.]
 - Minor bugs fix
 
