--- a/Lime/Changelog.txt
+++ b/Lime/Changelog.txt
@@ -1,3 +1,8 @@
+
+Lime r35 [UTC+9 2018.8.5. PM 08:15]
+- Fixed a bug: raid manager are not properly displayed.
+
+
 Lime r34 [UTC+9 2018.8.3. PM 06:10]
 - No longer register an Spelltimer with the Spell name.
 
