--- a/Lime/Changelog.txt
+++ b/Lime/Changelog.txt
@@ -1,4 +1,8 @@
 
+Lime r36 [UTC+9 2018.8.5. AM 07:45]
+- Update Library (LibUIDropDownMenu)
+
+
 Lime r35 [UTC+9 2018.8.5. PM 08:15]
 - Fixed a bug: raid manager are not properly displayed.
 
