--- a/Lime/Changelog.txt
+++ b/Lime/Changelog.txt
@@ -1,8 +1,7 @@
-Lime r37 [UTC+9 2018.8.8. PM 07:00]
-- Removed: specify up to three Outline functions. [moved alpha testing]
-- Adjust FrameStrata.
 
-THANK YOU FOR USING LIME, It is final Release.
+Lime r37 [UTC+9 2018.8.8. PM 07:00]
+- Last release
+- Removed: specify up to three Outline functions.
 
 
 Lime r36 [UTC+9 2018.8.5. AM 07:45]
